Promo unit tests done